# selinux

libselinux/src/: meson.build
libsepol/src/: meson.build
